--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -12,110 +12,115 @@
     <header>
 
         <nav>
+            <a href="WebStudio">WebStudio</a>
             <ul>
-
-                <li><a href="WebStudio">WebStudio</a></li>
                 <li><a href="Студия">Студия</a></li>
                 <li><a href="Портфолио">Портфолио</a></li>
                 <li><a href="Контакты">Контакты</a></li>
             </ul>
         </nav>
-        <adress>
-            <ul>
+             <ul>
                 <li> <a href="emailto:info@devstudio.com">info@devstudio.com </a></li>
                 <li> <a href="tel:+380961111111"> +38 096 111 11 11</a> </li>
             </ul>
-        </adress>
-    </header>
+     </header>
 
     <main>
 
         <section>
-            <h2>Эффективные решения для вашего бизнеса</h2>
+            <h1>Эффективные решения для вашего бизнеса</h1>
             <button class="button">Заказать услугу</button>
         </section>
 
         <section>
-            <h4>Внимание к деталям</h4>
-            <ul>
-                <li>Идейные соображения, а также начало повседневной работы по формированию позиции.</li>
-            </ul>
+            <h2> Качество работы </h2>
+                <ul>
+                    <li>
+                        <h3>Внимание к деталям</h3>
+                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    </li>
+                </ul>
 
-            <h4>Пунктуальность</h4>
-            <ul>
-                <li>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</li>
-            </ul>
+            <h2>Своевременность</h2>
+                <ul>
+                     <li>
+                        <h3>Пунктуальность</h3>
+                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой</p>
+                     </li>
+                 </ul>
 
-            <h4>Планирование</h4>
-            <ul>
-                <li>Равным образом консультация с широким активом в значительной степени обуславливает.</li>
-            </ul>
+            <h2>Выполнение плана</h2>
+                <ul>
+                    <li>
+                        <h3>Планирование</h3>
+                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    </li>
+                 </ul>
 
-            <h4>Современные технологии</h4>
-            <ul>
-                <li>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</li>
-            </ul>
+            <h2>Технологии в работе</h2>
+                <ul>
+                    <li>
+                        <h3>Современные технологии</h3>
+                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    </li>
+                </ul>
         </section>
 
         <section>
             <h2>Чем мы занимаемся</h2>
                 <ul>
                     <li> 
-                      <a href="Cоздание сайтов">
                         <img src="./images/создание сайтов.jpg" alt="Cоздание сайтов" width="370" />
                     </li>
                     <li>
-                        <a href="Разработка мобильных приложений">
                         <img src="./images/разработка мобильных приложений.jpg" alt="Разработка мобильных приложений" width="370" />
                     </li>
                     <li>
-                        <a href="Программные продукты для планшетов">
                          <img src="./images/программные продукты для планшетов .jpg" alt="Программные продукты для планшетов" width="370" />
                     </li>
                 </ul>
         </section>
 
+         <section>
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <a href="Игорь Демьяненко">
-                    <img src="./images/Игорь Демьяненко.jpg" alt="Игорь Демьяненко" width="270" />
-                    <h3>Игорь Демьяненко</h3>
-                    <h4>Product Designer</h4>
+                <img src="./images/Игорь Демьяненко.jpg" alt="Игорь Демьяненко" width="270" />
+                <h3>Игорь Демьяненко</h3>
+                <p>Product Designer</p>
             </li>
             <li>
-                 <a href="Ольга Репина">
-                 <img src="./images/Ольга Репина.jpg" alt="Ольга Репина" width="270" />
+                <img src="./images/Ольга Репина.jpg" alt="Ольга Репина" width="270" />
                 <h3>Ольга Репина</h3>
-                <h4>Frontend Developer</h4>
+                <p>Frontend Developer</p>
             </li>
             <li>
-                <a href="Николай Тарасов">
-                    <img src="./images/Николай Тарасов.jpg" alt="Николай Тарасов" width="270" />
-                    <h3>Николай Тарасов</h3>
-                    <h4>Marketing</h4>
+                 <img src="./images/Николай Тарасов.jpg" alt="Николай Тарасов" width="270" />
+                 <h3>Николай Тарасов</h3>
+                 <p>>Marketing</p>
             </li>
             <li>
-                <a href="Михаил Ермаков">
-                    <img src="./images/Михаил Ермаков.jpg" alt="Михаил Ермаков" width="270" />
-                    <h3>Михаил Ермаков</h3>
-                    <h4>UI Designer</h4>
+                <img src="./images/Михаил Ермаков.jpg" alt="Михаил Ермаков" width="270" />
+                <h3>Михаил Ермаков</h3>
+                <p>UI Designer</p>
             </li>
+            </ul>
+         </section>
     </main>
 
-    <footer>↩
-        <a href="https://webstudio.com.ua" target="_blank" rel="noopener noreferrer"> WebStudio </a>↩
-        <address>↩
-            <ul>↩
-                <li>↩
-                    <a href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">↩
-                        г. Киев, пр-т Леси Украинки, 26↩
-                    </a>↩
-                </li>↩
-                <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>↩
-                <li><a href="tel:+380991111111"> +38 099 111 11 11 </a></li>↩
-            </ul>↩
-        </address>↩
+    <footer>
+        <a href="https://webstudio.com.ua" target="_blank" rel="noopener noreferrer"> WebStudio </a>
+        <address>
+            <ul>
+                <li>
+                    <a href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">
+                        г. Киев, пр-т Леси Украинки, 26
+                    </a>
+                </li>
+                <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
+                <li><a href="tel:+380991111111"> +38 099 111 11 11 </a></li>
+            </ul>
+        </address>
     </footer>
 
 </body>
