--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <li>
                  <img src="./images/Николай Тарасов.jpg" alt="Николай Тарасов" width="270" />
                  <h3>Николай Тарасов</h3>
-                 <p>>Marketing</p>
+                 <p>Marketing</p>
             </li>
             <li>
                 <img src="./images/Михаил Ермаков.jpg" alt="Михаил Ермаков" width="270" />
@@ -108,6 +108,7 @@
          </section>
     </main>
 
+    
     <footer>
         <a href="https://webstudio.com.ua" target="_blank" rel="noopener noreferrer"> WebStudio </a>
         <address>
